# src/swagger.json
@@ -263,9 +263,7 @@
                         "description": "The number of posts to return per page"
                     }
                 ],
-                "security": [{
-                    "bearerAuth": []
-                }],
+                
                 "responses": {
                     "200": {
                         "description": "A list of posts",
@@ -294,6 +292,9 @@
                 "summary": "Create a new post",
                 "description": "This endpoint allows you to create a new post by providing the necessary information.",
                 "tags": ["Posts"],
+                "security": [{
+                    "bearerAuth": []
+                }],
                 "requestBody": {
                     "required": true,
                     "content": {
